tests/snapshots/ast_tests__article_with_reading_time.snap
---
source: tests/ast_tests.rs
expression: article
---
{
  "title": "Test Article",
  "content": [
    {
      "Paragraph": {
        "spans": [
          {
            "text": "Test content",
            "formatting": {
              "bold": false,
              "italic": false,
              "code": false,
              "link": null
            }
          }
        ]
      }
    }
  ],
  "metadata": {
    "published_date": "2025-01-01",
    "author": "Test Author",
    "url": "https://example.com/article",
    "feed_name": "Test Feed"
  },
  "comments": [],
  "reading_time_minutes": 5
}
