tests/snapshots/ast_tests__document_with_total_reading_time.snap
---
source: tests/ast_tests.rs
expression: doc
---
{
  "metadata": {
    "title": "Test Document",
    "author": "Test Author",
    "description": "Test description",
    "generated_at": "2025-01-01T00:00:00.000000Z"
  },
  "front_page": null,
  "content": {
    "feeds": [
      {
        "name": "Test Feed",
        "description": null,
        "url": null,
        "content": {
          "articles": [
            {
              "title": "Test Article",
              "metadata": {
                "published_date": null,
                "author": null,
                "url": null,
                "feed_name": "Test Feed"
              },
              "comments": [],
              "content": null
            }
          ],
          "total_reading_time_minutes": 60
        }
      }
    ],
    "total_reading_time_minutes": 120
  }
}
