tests/snapshots/ast_tests__text_content_structure.snap
---
source: tests/ast_tests.rs
expression: content
---
{
  "spans": [
    {
      "text": "Hello ",
      "formatting": {
        "bold": false,
        "italic": false,
        "code": false,
        "link": null
      }
    },
    {
      "text": "world",
      "formatting": {
        "bold": true,
        "italic": false,
        "code": false,
        "link": null
      }
    },
    {
      "text": "!",
      "formatting": {
        "bold": false,
        "italic": false,
        "code": false,
        "link": null
      }
    }
  ]
}
